--- a/checkAPI.html
+++ b/checkAPI.html
@@ -43,8 +43,8 @@
   <button onclick="getStreets()">Список streets:</button>
   <button onclick="geocode()">geocode:</button>
   <button onclick="postNewClient()">новый жилец</button>
-
-
+  <button onclick="fetchUrl11()">fetch</button>
+  <button onclick="fetchUrl12()">fetch2</button>
 
   <script>
 
@@ -297,6 +297,77 @@
         .catch(error => {
           console.error(error);
         });
+    }
+
+    function handleResponse(response) {
+      const contentType = response.headers.get('content-type');
+      if (contentType && contentType.includes('application/json')) {
+        return response.json();
+      } else {
+        console.log('Получен HTML вместо JSON');
+        return response.text();
+      }
+    }
+
+
+    const fetchUrl11 = () => {
+      // const url = 'https://google/com&#39';
+      // const url = 'https://api.openweathermap.org/data/2.5/weather?q=saint petersburg&appid=ecbaa67ba7bece31be9e96bd8181180a';
+      const url = ' https://reqres.in/';
+
+      let badResponseCount = 0;
+
+      const fetchData = () => {
+        fetch(url)
+          .then((response) => {
+            console.log(response);
+            if (!response.ok) {
+              badResponseCount++;
+              if (badResponseCount >= 5) {
+                console.log('bad response');
+                throw new Error('bad response');
+              }
+              return fetchData();
+            } else {
+              return handleResponse(response)
+            }
+          })
+          .then((data) => {
+            console.log(data);
+          })
+          .catch((error) => {
+            console.log('error=', error);
+          });
+      };
+
+      fetchData();
+    }
+
+
+    const fetchUrl12 = async () => {
+      let badResponseCount = 0;
+      // const url = 'https://google/com&#39';
+      // const url = 'https://api.openweathermap.org/data/2.5/weather?q=saint petersburg&appid=ecbaa67ba7bece31be9e96bd8181180a';
+      const url = ' https://reqres.in/';
+
+      try {
+        const response = await fetch(url);
+        console.log(response)
+        if (!response.ok) {
+
+          badResponseCount++;
+          if (badResponseCount >= 5) {
+            console.log('плохой ответ');
+            return; // выход на cath
+          }
+          await fetchUrl12();
+        } else {
+          const data = await handleResponse(response);
+          console.log(data);
+        }
+      } catch (error) {
+        console.log('error=', error);
+      }
     }
 
   </script>
